force-app/main/default/objects/Property_SalesAI_Match__c/Property_SalesAI_Match__c.object-meta.xml
<CustomObject>
    <label>Property Sales AI Match</label>
    <nameField>
        <displayFormat>AIMatch-{000000}</displayFormat>
        <label>Property Sales Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Sales AI Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>