force-app/main/default/objects/Property_SalesAI_Match__c/fields/Buyer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_First_Name__c</fullName>
    <formula>Property_SalesAI__r.Buyer_First_Name__c</formula>
    <label>Buyer First Name</label>
    <type>Text</type>
</CustomField>