force-app/main/default/objects/Property_SalesAI_Match__c/fields/Buyer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Last_Name__c</fullName>
    <formula>Property_SalesAI__r.Buyer_Last_Name__c</formula>
    <label>Buyer Last Name</label>
    <type>Text</type>
</CustomField>