force-app/main/default/objects/Property_SalesAI_Match__c/fields/Buyer_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Mailing_Address__c</fullName>
    <formula>Property_SalesAI__r.Buyer_Mailing_Address__c</formula>
    <label>Buyer Mailing Address</label>
    <type>Text</type>
</CustomField>