force-app/main/default/objects/Property_SalesAI_Match__c/fields/Previous_Seller__c.field-meta.xml
<CustomField>
    <fullName>Previous_Seller__c</fullName>
    <formula>Property_SalesAI__r.Previous_Seller__c</formula>
    <label>Previous Seller</label>
    <type>Text</type>
</CustomField>