force-app/main/default/objects/Property_SalesAI_Match__c/fields/Previous_Seller_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Previous_Seller_Mailing_Address__c</fullName>
    <formula>Property_SalesAI__r.Previous_Seller_Mailing_Address__c</formula>
    <label>Previous Seller Mailing Address</label>
    <type>Text</type>
</CustomField>