force-app/main/default/objects/Property_SalesAI_Match__c/fields/Property_SalesAI__c.field-meta.xml
<CustomField>
    <fullName>Property_SalesAI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Sales.AI</label>
    <referenceTo>Property_SalesAI__c</referenceTo>
    <relationshipName>Properties_Sales_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>