force-app/main/default/objects/Property_SalesAI_Match__c/fields/Property_SalesAI_History__c.field-meta.xml
<CustomField>
    <fullName>Property_SalesAI_History__c</fullName>
    <label>Property Sales AI History</label>
    <referenceTo>Property_SalesAI_History__c</referenceTo>
    <relationshipLabel>Property Sales AI Matches (Property Sales AI History)</relationshipLabel>
    <relationshipName>Property_Sales_AI_Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>