force-app/main/default/objects/Property_SalesAI_Match__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <formula>Property_SalesAI__r.Zip_Code__c</formula>
    <label>Property Zip Code</label>
    <type>Text</type>
</CustomField>