force-app/main/default/objects/Property_SalesAI_Match__c/fields/Recording_Date__c.field-meta.xml
<CustomField>
    <fullName>Recording_Date__c</fullName>
    <formula>Property_SalesAI__r.Recording_Date__c</formula>
    <label>Recording Date</label>
    <type>Date</type>
</CustomField>