force-app/main/default/objects/Property_SalesAI_Match__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>This is the record type name of the related lead/opportunity</description>
    <formula>IF(NOT(ISBLANK(Lead__r.RecordType.Name)),Lead__r.RecordType.Name,Opportunity__r.RecordType.Name)</formula>
    <label>RecordType</label>
    <type>Text</type>
</CustomField>