force-app/main/default/objects/Property_SalesAI_Match__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <formula>Property_SalesAI__r.Sales_Price__c</formula>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>