force-app/main/default/objects/Property_SalesAI_Match__c/fields/Seller_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Last_Name__c</fullName>
    <formula>Property_SalesAI__r.Seller_Last_Name__c</formula>
    <label>Seller Last Name</label>
    <type>Text</type>
</CustomField>