force-app/main/default/objects/Property_SalesAI_Match__c/fields/Taxed_Assessment_Value__c.field-meta.xml
<CustomField>
    <fullName>Taxed_Assessment_Value__c</fullName>
    <formula>Property_SalesAI__r.Taxed_Assessed_Value__c</formula>
    <label>Taxed Assessment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>