force-app/main/default/objects/Property_SalesAI_Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Recording_Date__c</columns>
    <columns>Sales_Price__c</columns>
    <columns>Taxed_Assessment_Value__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Seller_First_Name__c</columns>
    <columns>Seller_Last_Name__c</columns>
    <columns>Buyer_Mailing_Address__c</columns>
    <columns>Buyer_Last_Name__c</columns>
    <columns>Buyer_First_Name__c</columns>
    <columns>Previous_Seller_Mailing_Address__c</columns>
    <columns>Previous_Seller__c</columns>
    <columns>Property_SalesAI_History__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>